<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:screenOrientation="portrait"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/back"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/validate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate_button"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <TextView
        android:id="@+id/input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/infos_title_edit"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="240dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/validate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_title"
        app:layout_constraintVertical_bias="0.5">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name_placeholder"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="?attr/colorOnSecondary"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/firstname_placeholder"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="?attr/colorOnSecondary"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/tel_placeholder"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textColor="?attr/colorOnSecondary"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/domain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/domain_placeholder"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="?attr/colorOnSecondary"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/age"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="?attr/colorOnSecondary"
            android:textColorHint="#757575" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>