<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_identified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/confirm"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ok_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/label_layout"
        app:layout_constraintTop_toTopOf="@+id/label_layout">

        <TextView
            android:id="@+id/firstname_identified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name_identified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tel_identified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/domain_identified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/label_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_identified">

        <TextView
            android:id="@+id/firstname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname_placeholder"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_placeholder"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel_placeholder"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/domain_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domain_placeholder"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>