<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:screenOrientation="portrait"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/train_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/train_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/station_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Montpellier | Toulouse | Béziers | Lyon | Marseille"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/train_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/train_title"
        app:layout_constraintTop_toBottomOf="@+id/train_title" />

    <EditText
        android:id="@+id/departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/departure"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/train_title"
        app:layout_constraintTop_toBottomOf="@+id/station_label" />

    <EditText
        android:id="@+id/arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/arrival"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/departure"
        app:layout_constraintTop_toTopOf="@+id/departure"
        android:autofillHints="" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="@+id/departure"
        app:layout_constraintTop_toBottomOf="@+id/departure" />

    <ListView
        android:id="@+id/train_list"
        android:layout_width="385dp"
        android:layout_height="444dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

</androidx.constraintlayout.widget.ConstraintLayout>